--- a/src/dashboard.scss
+++ b/src/dashboard.scss
@@ -2,6 +2,12 @@
     display: grid;
     grid-template-columns: 20% auto;
     height: 100vh;
+    width: 100%;
+    @media screen and (max-width: 768px) {
+      grid-template-columns: auto;
+      width: 100%;
+      overflow-x: auto;
+     }
     .left {
       border-right: 2px solid #cfcfcf;
       .divimage {
@@ -13,10 +19,16 @@
         width: 100%;
         margin-top: 20px;
         margin-bottom: 20px;
+        @media screen and (max-width: 768px) {
+          display: none;
+              }
   
         img {
           width: 200px;
           height: 100%;
+          @media screen and (max-width: 768px) {
+        display: none;
+            }
         }
       }
   
@@ -37,6 +49,9 @@
             }
           }
         }
+        @media screen and (max-width: 768px) {
+         width: 100%;
+              }
       }
   
       .actionbtn {
@@ -45,6 +60,9 @@
         font-weight: bold;
         cursor: pointer;
       }
+      @media screen and (max-width: 768px) {
+       width: 100%;
+       }
     }
   
     .right {
@@ -66,7 +84,16 @@
           text-align: center;
           font-family: "Times New Roman", Times, serif;
           box-shadow: 0 10px 20px 0 rgba(153, 153, 153, 0.5);
+          @media screen and (max-width: 768px) {
+            width: 100px;
+   
+           
+            }
         }
+        @media screen and (max-width: 768px) {
+          width: 100%;
+          justify-content: center;
+               }
       }
       .middle {
         display: flex;
@@ -90,6 +117,9 @@
         margin-top: 15px;
         max-width: 100%;
         overflow-x: auto;
+        @media screen and (max-width: 768px) {
+          max-width: 350px;
+               }
         table {
           border-collapse: collapse;
           position: relative;
@@ -155,6 +185,9 @@
             }
           }
         }
+        @media screen and (max-width: 768px) {
+        width: 100%;
+              }
       }
     }
   }
