--- a/src/components/modal/index.scss
+++ b/src/components/modal/index.scss
@@ -12,13 +12,14 @@
   left: 0;
   overflow: auto;
   right: 0;
- 
+  
 
   .modalBox {
  
     width: 820px;
     background-color: #f7f8fc;
     position: absolute;
+    margin-top: 90px;
 
     @media screen and (max-width: 768px) {
        height: 100%;
